// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Store List component Snapshots menus 1`] = `
<div
  class="layout"
>
  <div
    class="v-card v-sheet theme--light"
    style="width: 100%;"
  >
    <div
      class="pa-4"
    >
      <div
        class="layout row"
      >
        <div
          class="flex sm6"
        >
          <div
            class="layout menu-title row mb-6"
          >
            <span
              class="black--text font-weight-bold title text-uppercase"
            >
              Kevin's Truck
            </span>
          </div>
        </div>
         
        <div
          class="flex sm6"
        >
          <div
            class="layout add-new-item row mb-6"
          >
            <button
              class="v-btn theme--light primary"
              type="button"
            >
              <div
                class="v-btn__content"
              >
                <i
                  aria-hidden="true"
                  class="v-icon material-icons theme--light"
                >
                  add_circle
                </i>
                 
                <span>
                  
                Add New Item
              
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
       
      <hr
        class="menu-title-line"
      />
       
      <div
        class="layout row"
      >
        <div
          class="flex"
        >
          <div
            class="event-list-table"
          >
            <div
              class="v-table__overflow"
            >
              <table
                class="v-datatable v-table v-datatable--select-all theme--light"
              >
                <thead>
                  <tr>
                    <th>
                      <div
                        class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
                      >
                        <div
                          class="v-input__control"
                        >
                          <div
                            class="v-input__slot"
                          >
                            <div
                              class="v-input--selection-controls__input"
                            >
                              <input
                                aria-checked="false"
                                role="checkbox"
                                type="checkbox"
                                value=""
                              />
                              <div
                                class="v-input--selection-controls__ripple"
                              />
                              <i
                                aria-hidden="true"
                                class="v-icon material-icons theme--light"
                              >
                                check_box_outline_blank
                              </i>
                            </div>
                          </div>
                        </div>
                      </div>
                    </th>
                    <th
                      aria-label="Item: Not sorted. Activate to sort ascending."
                      aria-sort="none"
                      class="column sortable text-xs-left"
                      role="columnheader"
                      scope="col"
                      tabindex="0"
                    >
                      <span
                        class="font-weight-bold"
                      >
                        
      Item
    
                      </span>
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                        style="font-size: 16px;"
                      >
                        arrow_upward
                      </i>
                    </th>
                    <th
                      aria-label="Servings: Not sorted. Activate to sort ascending."
                      aria-sort="none"
                      class="column sortable text-xs-left"
                      role="columnheader"
                      scope="col"
                      tabindex="0"
                    >
                      <span
                        class="font-weight-bold"
                      >
                        
      Servings
    
                      </span>
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                        style="font-size: 16px;"
                      >
                        arrow_upward
                      </i>
                    </th>
                    <th
                      aria-label="Cost: Not sorted. Activate to sort ascending."
                      aria-sort="none"
                      class="column sortable text-xs-left"
                      role="columnheader"
                      scope="col"
                      tabindex="0"
                    >
                      <span
                        class="font-weight-bold"
                      >
                        
      Cost
    
                      </span>
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                        style="font-size: 16px;"
                      >
                        arrow_upward
                      </i>
                    </th>
                    <th
                      aria-label="Manage: Not sorted."
                      aria-sort="none"
                      class="column text-xs-left"
                      role="columnheader"
                      scope="col"
                    >
                      <span
                        class="font-weight-bold"
                      >
                        
      Manage
    
                      </span>
                    </th>
                  </tr>
                  <tr
                    class="v-datatable__progress"
                  >
                    <th
                      class="column"
                      colspan="5"
                    />
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td
                      class="py-4"
                    >
                      <div
                        class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
                        primary=""
                      >
                        <div
                          class="v-input__control"
                        >
                          <div
                            class="v-input__slot"
                          >
                            <div
                              class="v-input--selection-controls__input"
                            >
                              <input
                                aria-checked="false"
                                primary=""
                                role="checkbox"
                                type="checkbox"
                                value=""
                              />
                              <div
                                class="v-input--selection-controls__ripple"
                              />
                              <i
                                aria-hidden="true"
                                class="v-icon material-icons theme--light"
                              >
                                check_box_outline_blank
                              </i>
                            </div>
                          </div>
                        </div>
                      </div>
                    </td>
                     
                    <td
                      class="full-width"
                    >
                      <div
                        class="subheading primary--text"
                      >
                        
        menu item 1
      
                      </div>
                       
                      <div
                        class="grey--text "
                      >
                        
        description 1
      
                      </div>
                    </td>
                     
                    <td>
                      <!---->
                       
                      <div
                        class="grey--text"
                      >
                        
        12
      
                      </div>
                    </td>
                     
                    <td>
                      <!---->
                       
                      <div
                        class="grey--text"
                      >
                        
        $200.00
      
                      </div>
                    </td>
                     
                    <td>
                      <div
                        class="v-menu"
                      >
                        <button
                          class="v-btn theme--dark primary primary-text--text"
                          type="button"
                        >
                          <div
                            class="v-btn__content"
                          >
                            
        Manage
       
                            <i
                              aria-hidden="true"
                              class="v-icon v-icon--right material-icons theme--dark"
                            >
                              arrow_drop_down
                            </i>
                          </div>
                        </button>
                        <div
                          class="v-menu__content theme--light "
                          style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                        >
                           
                          <div
                            class="v-list theme--light"
                            role="list"
                          >
                            <div
                              role="listitem"
                            >
                              <a
                                class="v-list__tile v-list__tile--link theme--light"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  Edit
                                </div>
                              </a>
                            </div>
                            <div
                              role="listitem"
                            >
                              <a
                                class="v-list__tile v-list__tile--link theme--light"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  Delete
                                </div>
                              </a>
                            </div>
                          </div>
                        </div>
                      </div>
                    </td>
                  </tr>
                  <tr>
                    <td
                      class="py-4"
                    >
                      <div
                        class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
                        primary=""
                      >
                        <div
                          class="v-input__control"
                        >
                          <div
                            class="v-input__slot"
                          >
                            <div
                              class="v-input--selection-controls__input"
                            >
                              <input
                                aria-checked="false"
                                primary=""
                                role="checkbox"
                                type="checkbox"
                                value=""
                              />
                              <div
                                class="v-input--selection-controls__ripple"
                              />
                              <i
                                aria-hidden="true"
                                class="v-icon material-icons theme--light"
                              >
                                check_box_outline_blank
                              </i>
                            </div>
                          </div>
                        </div>
                      </div>
                    </td>
                     
                    <td
                      class="full-width"
                    >
                      <div
                        class="subheading primary--text"
                      >
                        
        menu item 2
      
                      </div>
                       
                      <div
                        class="grey--text "
                      >
                        
        description 2
      
                      </div>
                    </td>
                     
                    <td>
                      <!---->
                       
                      <div
                        class="grey--text"
                      >
                        
        12
      
                      </div>
                    </td>
                     
                    <td>
                      <!---->
                       
                      <div
                        class="grey--text"
                      >
                        
        $200.00
      
                      </div>
                    </td>
                     
                    <td>
                      <div
                        class="v-menu"
                      >
                        <button
                          class="v-btn theme--dark primary primary-text--text"
                          type="button"
                        >
                          <div
                            class="v-btn__content"
                          >
                            
        Manage
       
                            <i
                              aria-hidden="true"
                              class="v-icon v-icon--right material-icons theme--dark"
                            >
                              arrow_drop_down
                            </i>
                          </div>
                        </button>
                        <div
                          class="v-menu__content theme--light "
                          style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                        >
                           
                          <div
                            class="v-list theme--light"
                            role="list"
                          >
                            <div
                              role="listitem"
                            >
                              <a
                                class="v-list__tile v-list__tile--link theme--light"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  Edit
                                </div>
                              </a>
                            </div>
                            <div
                              role="listitem"
                            >
                              <a
                                class="v-list__tile v-list__tile--link theme--light"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  Delete
                                </div>
                              </a>
                            </div>
                          </div>
                        </div>
                      </div>
                    </td>
                  </tr>
                  <tr>
                    <td
                      class="py-4"
                    >
                      <div
                        class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
                        primary=""
                      >
                        <div
                          class="v-input__control"
                        >
                          <div
                            class="v-input__slot"
                          >
                            <div
                              class="v-input--selection-controls__input"
                            >
                              <input
                                aria-checked="false"
                                primary=""
                                role="checkbox"
                                type="checkbox"
                                value=""
                              />
                              <div
                                class="v-input--selection-controls__ripple"
                              />
                              <i
                                aria-hidden="true"
                                class="v-icon material-icons theme--light"
                              >
                                check_box_outline_blank
                              </i>
                            </div>
                          </div>
                        </div>
                      </div>
                    </td>
                     
                    <td
                      class="full-width"
                    >
                      <div
                        class="subheading primary--text"
                      >
                        
        menu item 3
      
                      </div>
                       
                      <div
                        class="grey--text "
                      >
                        
        description 3
      
                      </div>
                    </td>
                     
                    <td>
                      <!---->
                       
                      <div
                        class="grey--text"
                      >
                        
        12
      
                      </div>
                    </td>
                     
                    <td>
                      <!---->
                       
                      <div
                        class="grey--text"
                      >
                        
        $2,100.00
      
                      </div>
                    </td>
                     
                    <td>
                      <div
                        class="v-menu"
                      >
                        <button
                          class="v-btn theme--dark primary primary-text--text"
                          type="button"
                        >
                          <div
                            class="v-btn__content"
                          >
                            
        Manage
       
                            <i
                              aria-hidden="true"
                              class="v-icon v-icon--right material-icons theme--dark"
                            >
                              arrow_drop_down
                            </i>
                          </div>
                        </button>
                        <div
                          class="v-menu__content theme--light "
                          style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                        >
                           
                          <div
                            class="v-list theme--light"
                            role="list"
                          >
                            <div
                              role="listitem"
                            >
                              <a
                                class="v-list__tile v-list__tile--link theme--light"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  Edit
                                </div>
                              </a>
                            </div>
                            <div
                              role="listitem"
                            >
                              <a
                                class="v-list__tile v-list__tile--link theme--light"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  Delete
                                </div>
                              </a>
                            </div>
                          </div>
                        </div>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
            <div
              class="v-datatable v-table v-datatable--select-all theme--light"
            >
              <div
                class="v-datatable__actions"
              >
                <div
                  class="v-datatable__actions__select"
                >
                  Rows per page:
                  <div
                    class="v-input v-text-field v-select v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light"
                    role="combobox"
                  >
                    <div
                      class="v-input__control"
                    >
                      <div
                        class="v-input__slot"
                      >
                        <div
                          class="v-select__slot"
                        >
                          <div
                            class="v-select__selections"
                          >
                            <div
                              class="v-select__selection v-select__selection--comma"
                            >
                              10
                            </div>
                            <input
                              aria-label="Rows per page:"
                              aria-readonly="false"
                              autocomplete="on"
                              readonly="readonly"
                              type="text"
                            />
                          </div>
                          <div
                            class="v-input__append-inner"
                          >
                            <div
                              class="v-input__icon v-input__icon--append"
                            >
                              <i
                                aria-hidden="true"
                                class="v-icon material-icons theme--light"
                              >
                                arrow_drop_down
                              </i>
                            </div>
                          </div>
                        </div>
                        <div
                          class="v-menu"
                        >
                          <div
                            class="v-menu__content theme--light v-menu__content--auto "
                            style="max-height: 200px; min-width: 75px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                          >
                            <div
                              class="v-select-list v-card theme--light"
                            >
                              <div
                                class="v-list theme--light"
                                role="list"
                              >
                                <div
                                  role="listitem"
                                >
                                  <a
                                    class="v-list__tile v-list__tile--link theme--light"
                                  >
                                    <div
                                      class="v-list__tile__content"
                                    >
                                      <div
                                        class="v-list__tile__title"
                                      >
                                        5
                                      </div>
                                    </div>
                                  </a>
                                </div>
                                <div
                                  class="primary--text"
                                  role="listitem"
                                >
                                  <a
                                    class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
                                  >
                                    <div
                                      class="v-list__tile__content"
                                    >
                                      <div
                                        class="v-list__tile__title"
                                      >
                                        10
                                      </div>
                                    </div>
                                  </a>
                                </div>
                                <div
                                  role="listitem"
                                >
                                  <a
                                    class="v-list__tile v-list__tile--link theme--light"
                                  >
                                    <div
                                      class="v-list__tile__content"
                                    >
                                      <div
                                        class="v-list__tile__title"
                                      >
                                        15
                                      </div>
                                    </div>
                                  </a>
                                </div>
                                <div
                                  role="listitem"
                                >
                                  <a
                                    class="v-list__tile v-list__tile--link theme--light"
                                  >
                                    <div
                                      class="v-list__tile__content"
                                    >
                                      <div
                                        class="v-list__tile__title"
                                      >
                                        25
                                      </div>
                                    </div>
                                  </a>
                                </div>
                                <div
                                  role="listitem"
                                >
                                  <a
                                    class="v-list__tile v-list__tile--link theme--light"
                                  >
                                    <div
                                      class="v-list__tile__content"
                                    >
                                      <div
                                        class="v-list__tile__title"
                                      >
                                        30
                                      </div>
                                    </div>
                                  </a>
                                </div>
                                <div
                                  role="listitem"
                                >
                                  <a
                                    class="v-list__tile v-list__tile--link theme--light"
                                  >
                                    <div
                                      class="v-list__tile__content"
                                    >
                                      <div
                                        class="v-list__tile__title"
                                      >
                                        50
                                      </div>
                                    </div>
                                  </a>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="v-datatable__actions__range-controls"
                >
                  <div
                    class="v-datatable__actions__pagination"
                  >
                    1-10 of 10
                  </div>
                  <button
                    aria-label="Previous page"
                    class="v-btn v-btn--disabled v-btn--flat v-btn--icon theme--light"
                    disabled="disabled"
                    type="button"
                  >
                    <div
                      class="v-btn__content"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        chevron_left
                      </i>
                    </div>
                  </button>
                  <button
                    aria-label="Next page"
                    class="v-btn v-btn--disabled v-btn--flat v-btn--icon theme--light"
                    disabled="disabled"
                    type="button"
                  >
                    <div
                      class="v-btn__content"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        chevron_right
                      </i>
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
       
      <div
        class="layout row"
      >
        <div
          class="flex"
        >
          <div
            class="v-dialog__container"
            style="display: block;"
          >
            <div
              class="v-dialog__content"
              style="z-index: 0;"
              tabindex="-1"
            >
              <div
                class="v-dialog"
                style="max-width: 700px; display: none;"
              >
                <div
                  class="pa-2 v-card v-sheet theme--light"
                >
                  <div
                    class="v-card__title"
                  >
                    <span
                      class="title font-weight-bold"
                    >
                      Add new menu item
                    </span>
                  </div>
                   
                  <div
                    class="v-card__text"
                  >
                    <div
                      class="layout wrap justify-space-between"
                    >
                      <div
                        class="flex sm5"
                      >
                        <div
                          class="layout row mb-2"
                        >
                          <span
                            class="grey--text font-weight-bold"
                          >
                            Item Title
                          </span>
                        </div>
                         
                        <div
                          class="v-input v-text-field v-text-field--single-line v-text-field--solo v-text-field--enclosed v-text-field--placeholder theme--light"
                        >
                          <div
                            class="v-input__control"
                          >
                            <div
                              class="v-input__slot"
                            >
                              <div
                                class="v-text-field__slot"
                              >
                                <input
                                  data-vv-name="title"
                                  placeholder="Enter menu item title"
                                  type="text"
                                />
                              </div>
                            </div>
                            <div
                              class="v-text-field__details"
                            >
                              <div
                                class="v-messages theme--light"
                              >
                                <div
                                  class="v-messages__wrapper"
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                       
                      <div
                        class="flex sm3"
                      >
                        <div
                          class="layout row mb-2"
                        >
                          <span
                            class="grey--text font-weight-bold"
                          >
                            Servings
                          </span>
                        </div>
                         
                        <div
                          class="v-input v-text-field v-text-field--single-line v-text-field--solo v-text-field--enclosed theme--light"
                        >
                          <div
                            class="v-input__control"
                          >
                            <div
                              class="v-input__slot"
                            >
                              <div
                                class="v-text-field__slot"
                              >
                                <input
                                  data-vv-name="servings"
                                  type="text"
                                />
                              </div>
                            </div>
                            <div
                              class="v-text-field__details"
                            >
                              <div
                                class="v-messages theme--light"
                              >
                                <div
                                  class="v-messages__wrapper"
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                       
                      <div
                        class="flex sm3"
                      >
                        <div
                          class="layout row mb-2"
                        >
                          <span
                            class="grey--text font-weight-bold"
                          >
                            Cost
                          </span>
                        </div>
                         
                        <div
                          class="v-input v-text-field v-text-field--single-line v-text-field--solo v-text-field--enclosed theme--light"
                        >
                          <div
                            class="v-input__control"
                          >
                            <div
                              class="v-input__slot"
                            >
                              <div
                                class="v-text-field__slot"
                              >
                                <input
                                  data-vv-name="cost"
                                  type="text"
                                />
                              </div>
                            </div>
                            <div
                              class="v-text-field__details"
                            >
                              <div
                                class="v-messages theme--light"
                              >
                                <div
                                  class="v-messages__wrapper"
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                       
                      <div
                        class="flex sm12"
                      >
                        <div
                          class="layout row mb-2"
                        >
                          <span
                            class="grey--text font-weight-bold"
                          >
                            Item Description 
                          </span>
                        </div>
                         
                        <div
                          class="v-input v-textarea v-text-field v-text-field--single-line v-text-field--solo v-text-field--enclosed v-text-field--placeholder theme--light"
                        >
                          <div
                            class="v-input__control"
                          >
                            <div
                              class="v-input__slot"
                            >
                              <div
                                class="v-text-field__slot"
                              >
                                <textarea
                                  data-vv-name="cost"
                                  placeholder="Enter menu item description"
                                  rows="5"
                                />
                              </div>
                            </div>
                            <div
                              class="v-text-field__details"
                            >
                              <div
                                class="v-messages theme--light"
                              >
                                <span
                                  class="v-messages__wrapper"
                                  name="message-transition"
                                  tag="div"
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                   
                  <div
                    class="v-card__actions"
                  >
                    <button
                      class="v-btn v-btn--block theme--light"
                      type="button"
                    >
                      <div
                        class="v-btn__content"
                      >
                        
        Cancel
      
                      </div>
                    </button>
                     
                    <button
                      class="v-btn v-btn--block theme--light primary"
                      type="button"
                    >
                      <div
                        class="v-btn__content"
                      >
                        
        Save
      
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Store List component Snapshots menus empty 1`] = `
<div
  class="layout"
>
  <div
    class="v-card v-sheet theme--light"
    style="width: 100%;"
  >
    <div
      class="pa-4"
    >
      <div
        class="layout row"
      >
        <div
          class="flex sm6"
        >
          <div
            class="layout menu-title row mb-6"
          >
            <span
              class="black--text font-weight-bold title text-uppercase"
            >
              
            </span>
          </div>
        </div>
         
        <div
          class="flex sm6"
        >
          <div
            class="layout add-new-item row mb-6"
          >
            <button
              class="v-btn theme--light primary"
              type="button"
            >
              <div
                class="v-btn__content"
              >
                <i
                  aria-hidden="true"
                  class="v-icon material-icons theme--light"
                >
                  add_circle
                </i>
                 
                <span>
                  
                Add New Item
              
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
       
      <hr
        class="menu-title-line"
      />
       
      <div
        class="layout row"
      >
        <div
          class="flex"
        >
          <div
            class="event-list-table"
          >
            <div
              class="v-table__overflow"
            >
              <table
                class="v-datatable v-table v-datatable--select-all theme--light"
              >
                <thead>
                  <tr>
                    <th>
                      <div
                        class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
                      >
                        <div
                          class="v-input__control"
                        >
                          <div
                            class="v-input__slot"
                          >
                            <div
                              class="v-input--selection-controls__input"
                            >
                              <input
                                aria-checked="false"
                                role="checkbox"
                                type="checkbox"
                                value=""
                              />
                              <div
                                class="v-input--selection-controls__ripple"
                              />
                              <i
                                aria-hidden="true"
                                class="v-icon material-icons theme--light"
                              >
                                check_box_outline_blank
                              </i>
                            </div>
                          </div>
                        </div>
                      </div>
                    </th>
                    <th
                      aria-label="Item: Not sorted. Activate to sort ascending."
                      aria-sort="none"
                      class="column sortable text-xs-left"
                      role="columnheader"
                      scope="col"
                      tabindex="0"
                    >
                      <span
                        class="font-weight-bold"
                      >
                        
      Item
    
                      </span>
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                        style="font-size: 16px;"
                      >
                        arrow_upward
                      </i>
                    </th>
                    <th
                      aria-label="Servings: Not sorted. Activate to sort ascending."
                      aria-sort="none"
                      class="column sortable text-xs-left"
                      role="columnheader"
                      scope="col"
                      tabindex="0"
                    >
                      <span
                        class="font-weight-bold"
                      >
                        
      Servings
    
                      </span>
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                        style="font-size: 16px;"
                      >
                        arrow_upward
                      </i>
                    </th>
                    <th
                      aria-label="Cost: Not sorted. Activate to sort ascending."
                      aria-sort="none"
                      class="column sortable text-xs-left"
                      role="columnheader"
                      scope="col"
                      tabindex="0"
                    >
                      <span
                        class="font-weight-bold"
                      >
                        
      Cost
    
                      </span>
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                        style="font-size: 16px;"
                      >
                        arrow_upward
                      </i>
                    </th>
                    <th
                      aria-label="Manage: Not sorted."
                      aria-sort="none"
                      class="column text-xs-left"
                      role="columnheader"
                      scope="col"
                    >
                      <span
                        class="font-weight-bold"
                      >
                        
      Manage
    
                      </span>
                    </th>
                  </tr>
                  <tr
                    class="v-datatable__progress"
                  >
                    <th
                      class="column"
                      colspan="5"
                    />
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td
                      class="text-xs-center"
                      colspan="5"
                    >
                      No matching records found
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
            <div
              class="v-datatable v-table v-datatable--select-all theme--light"
            >
              <div
                class="v-datatable__actions"
              >
                <div
                  class="v-datatable__actions__select"
                >
                  Rows per page:
                  <div
                    class="v-input v-text-field v-select v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light"
                    role="combobox"
                  >
                    <div
                      class="v-input__control"
                    >
                      <div
                        class="v-input__slot"
                      >
                        <div
                          class="v-select__slot"
                        >
                          <div
                            class="v-select__selections"
                          >
                            <div
                              class="v-select__selection v-select__selection--comma"
                            >
                              10
                            </div>
                            <input
                              aria-label="Rows per page:"
                              aria-readonly="false"
                              autocomplete="on"
                              readonly="readonly"
                              type="text"
                            />
                          </div>
                          <div
                            class="v-input__append-inner"
                          >
                            <div
                              class="v-input__icon v-input__icon--append"
                            >
                              <i
                                aria-hidden="true"
                                class="v-icon material-icons theme--light"
                              >
                                arrow_drop_down
                              </i>
                            </div>
                          </div>
                        </div>
                        <div
                          class="v-menu"
                        >
                          <div
                            class="v-menu__content theme--light v-menu__content--auto "
                            style="max-height: 200px; min-width: 75px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                          >
                            <div
                              class="v-select-list v-card theme--light"
                            >
                              <div
                                class="v-list theme--light"
                                role="list"
                              >
                                <div
                                  role="listitem"
                                >
                                  <a
                                    class="v-list__tile v-list__tile--link theme--light"
                                  >
                                    <div
                                      class="v-list__tile__content"
                                    >
                                      <div
                                        class="v-list__tile__title"
                                      >
                                        5
                                      </div>
                                    </div>
                                  </a>
                                </div>
                                <div
                                  class="primary--text"
                                  role="listitem"
                                >
                                  <a
                                    class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
                                  >
                                    <div
                                      class="v-list__tile__content"
                                    >
                                      <div
                                        class="v-list__tile__title"
                                      >
                                        10
                                      </div>
                                    </div>
                                  </a>
                                </div>
                                <div
                                  role="listitem"
                                >
                                  <a
                                    class="v-list__tile v-list__tile--link theme--light"
                                  >
                                    <div
                                      class="v-list__tile__content"
                                    >
                                      <div
                                        class="v-list__tile__title"
                                      >
                                        15
                                      </div>
                                    </div>
                                  </a>
                                </div>
                                <div
                                  role="listitem"
                                >
                                  <a
                                    class="v-list__tile v-list__tile--link theme--light"
                                  >
                                    <div
                                      class="v-list__tile__content"
                                    >
                                      <div
                                        class="v-list__tile__title"
                                      >
                                        25
                                      </div>
                                    </div>
                                  </a>
                                </div>
                                <div
                                  role="listitem"
                                >
                                  <a
                                    class="v-list__tile v-list__tile--link theme--light"
                                  >
                                    <div
                                      class="v-list__tile__content"
                                    >
                                      <div
                                        class="v-list__tile__title"
                                      >
                                        30
                                      </div>
                                    </div>
                                  </a>
                                </div>
                                <div
                                  role="listitem"
                                >
                                  <a
                                    class="v-list__tile v-list__tile--link theme--light"
                                  >
                                    <div
                                      class="v-list__tile__content"
                                    >
                                      <div
                                        class="v-list__tile__title"
                                      >
                                        50
                                      </div>
                                    </div>
                                  </a>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="v-datatable__actions__range-controls"
                >
                  <div
                    class="v-datatable__actions__pagination"
                  >
                    1-10 of 10
                  </div>
                  <button
                    aria-label="Previous page"
                    class="v-btn v-btn--disabled v-btn--flat v-btn--icon theme--light"
                    disabled="disabled"
                    type="button"
                  >
                    <div
                      class="v-btn__content"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        chevron_left
                      </i>
                    </div>
                  </button>
                  <button
                    aria-label="Next page"
                    class="v-btn v-btn--disabled v-btn--flat v-btn--icon theme--light"
                    disabled="disabled"
                    type="button"
                  >
                    <div
                      class="v-btn__content"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        chevron_right
                      </i>
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
       
      <div
        class="layout row"
      >
        <div
          class="flex"
        >
          <div
            class="v-dialog__container"
            style="display: block;"
          >
            <div
              class="v-dialog__content"
              style="z-index: 0;"
              tabindex="-1"
            >
              <div
                class="v-dialog"
                style="max-width: 700px; display: none;"
              >
                <div
                  class="pa-2 v-card v-sheet theme--light"
                >
                  <div
                    class="v-card__title"
                  >
                    <span
                      class="title font-weight-bold"
                    >
                      Add new menu item
                    </span>
                  </div>
                   
                  <div
                    class="v-card__text"
                  >
                    <div
                      class="layout wrap justify-space-between"
                    >
                      <div
                        class="flex sm5"
                      >
                        <div
                          class="layout row mb-2"
                        >
                          <span
                            class="grey--text font-weight-bold"
                          >
                            Item Title
                          </span>
                        </div>
                         
                        <div
                          class="v-input v-text-field v-text-field--single-line v-text-field--solo v-text-field--enclosed v-text-field--placeholder theme--light"
                        >
                          <div
                            class="v-input__control"
                          >
                            <div
                              class="v-input__slot"
                            >
                              <div
                                class="v-text-field__slot"
                              >
                                <input
                                  data-vv-name="title"
                                  placeholder="Enter menu item title"
                                  type="text"
                                />
                              </div>
                            </div>
                            <div
                              class="v-text-field__details"
                            >
                              <div
                                class="v-messages theme--light"
                              >
                                <div
                                  class="v-messages__wrapper"
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                       
                      <div
                        class="flex sm3"
                      >
                        <div
                          class="layout row mb-2"
                        >
                          <span
                            class="grey--text font-weight-bold"
                          >
                            Servings
                          </span>
                        </div>
                         
                        <div
                          class="v-input v-text-field v-text-field--single-line v-text-field--solo v-text-field--enclosed theme--light"
                        >
                          <div
                            class="v-input__control"
                          >
                            <div
                              class="v-input__slot"
                            >
                              <div
                                class="v-text-field__slot"
                              >
                                <input
                                  data-vv-name="servings"
                                  type="text"
                                />
                              </div>
                            </div>
                            <div
                              class="v-text-field__details"
                            >
                              <div
                                class="v-messages theme--light"
                              >
                                <div
                                  class="v-messages__wrapper"
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                       
                      <div
                        class="flex sm3"
                      >
                        <div
                          class="layout row mb-2"
                        >
                          <span
                            class="grey--text font-weight-bold"
                          >
                            Cost
                          </span>
                        </div>
                         
                        <div
                          class="v-input v-text-field v-text-field--single-line v-text-field--solo v-text-field--enclosed theme--light"
                        >
                          <div
                            class="v-input__control"
                          >
                            <div
                              class="v-input__slot"
                            >
                              <div
                                class="v-text-field__slot"
                              >
                                <input
                                  data-vv-name="cost"
                                  type="text"
                                />
                              </div>
                            </div>
                            <div
                              class="v-text-field__details"
                            >
                              <div
                                class="v-messages theme--light"
                              >
                                <div
                                  class="v-messages__wrapper"
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                       
                      <div
                        class="flex sm12"
                      >
                        <div
                          class="layout row mb-2"
                        >
                          <span
                            class="grey--text font-weight-bold"
                          >
                            Item Description 
                          </span>
                        </div>
                         
                        <div
                          class="v-input v-textarea v-text-field v-text-field--single-line v-text-field--solo v-text-field--enclosed v-text-field--placeholder theme--light"
                        >
                          <div
                            class="v-input__control"
                          >
                            <div
                              class="v-input__slot"
                            >
                              <div
                                class="v-text-field__slot"
                              >
                                <textarea
                                  data-vv-name="cost"
                                  placeholder="Enter menu item description"
                                  rows="5"
                                />
                              </div>
                            </div>
                            <div
                              class="v-text-field__details"
                            >
                              <div
                                class="v-messages theme--light"
                              >
                                <span
                                  class="v-messages__wrapper"
                                  name="message-transition"
                                  tag="div"
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                   
                  <div
                    class="v-card__actions"
                  >
                    <button
                      class="v-btn v-btn--block theme--light"
                      type="button"
                    >
                      <div
                        class="v-btn__content"
                      >
                        
        Cancel
      
                      </div>
                    </button>
                     
                    <button
                      class="v-btn v-btn--block theme--light primary"
                      type="button"
                    >
                      <div
                        class="v-btn__content"
                      >
                        
        Save
      
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
